added pagination to the search page